--- a/qtify/src/index.css
+++ b/qtify/src/index.css
@@ -21,6 +21,7 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   font-family: "Poppins", sans-serif;
+  background-color: var(--color-black);
 }
 img,
 picture,
