--- a/qtify/src/components/Section/Section.module.css
+++ b/qtify/src/components/Section/Section.module.css
@@ -16,6 +16,7 @@
   line-height: 30px;
   letter-spacing: 0px;
   text-align: left;
+  text-transform: capitalize;
 }
 .collapseButton {
   color: var(--color-primary);
